--- a/chat.html
+++ b/chat.html
@@ -5,79 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-    /> 
-    <title>Chat | KAKAO CLONE</title>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Chat | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <span class="status-bar_clock">13:54</span>
+        <span class="status-bar_clock">13:15</span>
       </div>
-      <div class="status-bar_column"></div>
+      <div class="status-bar_column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
         <span class="status-bar_battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
-        <div class="header_header-cloumn">
-                <a href="index.html" class="header_back-btn">
-                    <i class="fas fa-arrow-left fa-2x"></i>
-                </a>    
-            <h1 class="header_title">Best Friend</h1>
-        </div>
+      <div class="header_header-column">
+        <a href="index.html" class="header_back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1 class="header_title">Best Friend</h1>
+      </div>
+      <div class="header_header-column">
+        <span class="header_icon">
+          <i class="fas fa-search"></i>
+        </span>
 
-        <div class="header_header-cloumn">
-            <span class="header_icon">
-            <i class="fas fa-search"></i>
-            </span>
-            <div class="header_icon">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
+        <span class="header_icon">
+          <i class="fas fa-bars"></i>
+        </span>
+      </div>
     </header>
     <main class="chat">
-        <ul class="chat_messages">
-            <span class="chat_timestamp">Friday, January 11, 2019</span>
-            <li class="incoming-message message">
-                <img src="image/download.jpg" class="g-avatar message_avatar"/>
-                <div class="messeage_content">
-                    <span class="message_author">Best Friend</span>
-                    <div class="message_bubble">
-                        Congrats I love you!
-                    </div>
-                </div>
-                <span class="message_timestamp"></span>
-            </li>
-            <li class="incoming-message message">
-                <span class="message_timestamp"></span>
-                <div class="messeage_content">
-                    <div class="message_bubble">
-                        Thank you see you soon!
-                    </div>
-                </div> 
-            </li>
-        </ul>
+      <ul class="chat_messages">
+        <span class="chat_timestamp">Friday, January 11, 2019</span>
+        <li class="incoming-message message">
+          <img src="image/download.jpg" class="g-avatar message_avatar" />
+          <div class="message_content">
+            <span class="message_author">Best Friend</span>
+            <div class="message_bubble">
+              Congrats I love you!
+            </div>
+          </div>
+          <span class="message_timestamp">11:50</span>
+        </li>
+
+        <li class="incoming-message message">
+          <span class="message_timestamp">12:00</span>
+          <div class="message_content">
+            <div class="message_bubble">
+              Thank you
+            </div>
+          </div>
+        </li>
+
+        <li class="incoming-message message">
+          <img src="image/download.jpg" class="g-avatar message_avatar" />
+          <div class="message_content">
+            <span class="message_author">Best Friend</span>
+            <div class="message_bubble">
+              you'r wellcome
+            </div>
+          </div>
+          <span class="message_timestamp">12:10</span>
+        </li>
+      </ul>
     </main>
+
     <div class="chat_write">
-        <div class="chat_write-column">
-            <i class="far fa-plus-square"></i>
-        </div>
-        <div class="chat_write-column">
-           <input type="text" placeholder="Send message" class="chat_write-input">
-        </div>
-        <div class="chat_write-column">
-            <span class="chat_write-icon">
-                <i class="far fa-smile-wink"></i>
-            </span>
-            <span class="chat_write-icon">
-                <i class="fas fa-microphone"></i>
-            </span>
-        </div>
+      <div class="chat_write-column">
+        <i class="far fa-plus-square"></i>
+      </div>
+      <div class="chat_write-column">
+        <input
+          type="text"
+          placeholder="Send message"
+          class="chat_write-input"
+        />
+      </div>
+      <div class="chat_write-column">
+        <span class="chat_write-icon">
+          <i class="far fa-smile-wink"></i>
+        </span>
+        <span class="chat_write-icon">
+          <i class="fas fa-microphone"></i>
+        </span>
+      </div>
     </div>
-</body>
+  </body>
 </html>
