--- a/find.html
+++ b/find.html
@@ -5,39 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-    /> 
-    <title>Find | KAKAO CLONE</title>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Find | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <span class="status-bar_clock">13:54</span>
+        <span class="status-bar_clock">13:15</span>
       </div>
-      <div class="status-bar_column"></div>
+      <div class="status-bar_column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
         <span class="status-bar_battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
-        <div class="header_header-cloumn">
-          <h1 class="header_title">Find</h1>
-        </div>
-
-        <div class="header_header-cloumn">
-          <span class="header_icon">
-            <i class="fas fa-search"></i>
-          </span>
-
-          <span class="header_icon">
-            <i class="fas fa-cog"></i>
-          </span>
-        </div>
+      <div class="header_header-column">
+        <h1 class="header_title">Find</h1>
+      </div>
+      <div class="header_header-column">
+        <span class="header_icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header_icon">
+          <i class="fas fa-cog"></i>
+        </span>
+      </div>
     </header>
+
     <main class="find">
       <header class="find_header">
         <ul class="find_header-list">
@@ -45,46 +45,39 @@
             <span class="header-btn_icon">
               <i class="fas fa-qrcode fa-2x"></i>
             </span>
-            <span class="header-btn_title">
-              QR Code
-            </span>
+            <span class="header-btn_title">QR Code</span>
           </li>
+
           <li class="find_header-btn header-btn">
             <span class="header-btn_icon">
               <i class="fas fa-user-plus fa-2x"></i>
             </span>
-            <span class="header-btn_title">
-              Add by Contacts
-            </span>
+            <span class="header-btn_title">Add by Contacts</span>
           </li>
+
           <li class="find_header-btn header-btn">
             <span class="header-btn_icon">
               <i class="fas fa-passport fa-2x"></i>
             </span>
-            <span class="header-btn_title">
-              Add by ID
-            </span>
+            <span class="header-btn_title">Add by ID</span>
           </li>
+
           <li class="find_header-btn header-btn">
             <span class="header-btn_icon">
-              <i class="far fa-envelope fa-2x"></i>
+              <i class="far fa-envelope fa-3x"></i>
             </span>
-            <span class="header-btn_title">
-              Invite
-            </span>
+            <span class="header-btn_title">Invite</span>
           </li>
         </ul>
       </header>
-      <ul class="find_recommeded">
-        <h5 class="find_title">
-          Recommeded Friends
-        </h5>
+      <ul class="find_recommended">
+        <h5 class="find_title">Recommended Friends</h5>
         <li class="find_friend friend friend--lg">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avatar friend friend--lg">
+            <img src="image/download.jpg" class="g-avator friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
-                Nicolas Serrano
+                Han Heejin
               </span>
             </div>
           </div>
@@ -94,33 +87,35 @@
             </div>
           </div>
         </li>
-          
-        </li>
       </ul>
     </main>
+
     <nav class="nav">
       <ul class="nav_list">
         <li class="nav_list-item">
           <a href="friends.html" class="nav_list-link">
-          <i class="far fa-user"></i></a>
+            <i class="far fa-user"></i>
+          </a>
         </li>
-        
+
         <li class="nav_list-item">
           <a href="index.html" class="nav_list-link">
-          <i class="far fa-comment"></i></a>
+            <i class="far fa-comment"></i>
+          </a>
         </li>
 
         <li class="nav_list-item">
           <a href="find.html" class="nav_list-link">
-          <i class="fas fa-search"></i></a>
+            <i class="fas fa-search"></i>
+          </a>
         </li>
+
         <li class="nav_list-item">
           <a href="more.html" class="nav_list-link">
-          <i class="fas fa-ellipsis-h"></i></a>
+            <i class="fas fa-ellipsis-h"></i>
+          </a>
         </li>
       </ul>
-
-    </nav>
     </nav>
   </body>
 </html>
