--- a/index.html
+++ b/index.html
@@ -5,88 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-    /> 
-    <title>CHAT | KAKAO CLONE</title>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Chats | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <span class="status-bar_clock">13:54</span>
+        <span class="status-bar_clock">13:15</span>
       </div>
-      <div class="status-bar_column"></div>
+      <div class="status-bar_column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
         <span class="status-bar_battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
-        <div class="header_header-cloumn">
-          <h1 class="header_title">Chats</h1>
-        </div>
-
-        <div class="header_header-cloumn">
-          <span class="header_icon">
-            <i class="fas fa-search"></i>
-          </span>
-
-          <span class="header_icon">
-            <i class="far fa-comment"></i>
-          </span>
-
-          <span class="header_icon">
-            <i class="fas fa-cog"></i>
-          </span>
-        </div>
+      <div class="header_header-column">
+        <h1 class="header_title">Chats</h1>
+      </div>
+      <div class="header_header-column">
+        <span class="header_icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header_icon">
+          <i class="far fa-comment"></i>
+        </span>
+        <span class="header_icon">
+          <i class="fas fa-cog"></i>
+        </span>
+      </div>
     </header>
     <main class="chats">
       <ul class="chats_list">
-        <li class="chats_chat chat" >
+        <li class="chats_chat chat">
           <a href="chat.html">
-          <div class="chat_colum">
-            <img src="image/download.jpg"  class="chat_avatar g -avator">
-            <div class="chat_content">
-              <span class="chat_username">
-                Lynn
-              </span>
-              <span class="chat_preview">
-                Going home
-              </span>
+            <div class="chat_column">
+              <img src="image/download.jpg" class="chat_avatar g-avatar" />
+              <div class="chat_content">
+                <span class="chat_username">
+                  Lynn
+                </span>
+                <span class="chat_preview">
+                  Going home!
+                </span>
+              </div>
             </div>
-          </div>
-          <div class="chat_colum">
-            <span class="chat_timestamp">Yesterday</span>
-          </div>
-          </a>         
+            <div class="chat_column">
+              <span class="chat_timestamp">Yesterday</span>
+            </div>
+          </a>
         </li>
       </ul>
-
-    </main c>
+    </main>
     <nav class="nav">
       <ul class="nav_list">
         <li class="nav_list-item">
           <a href="friends.html" class="nav_list-link">
-          <i class="far fa-user"></i></a>
+            <i class="far fa-user"></i>
+          </a>
         </li>
-        
+
         <li class="nav_list-item">
           <a href="index.html" class="nav_list-link">
-          <i class="fas fa-comment"></i></a>
+            <i class="fas fa-comment"></i>
+          </a>
         </li>
 
         <li class="nav_list-item">
           <a href="find.html" class="nav_list-link">
-          <i class="fas fa-search"></i></a>
+            <i class="fas fa-search"></i>
+          </a>
         </li>
+
         <li class="nav_list-item">
           <a href="more.html" class="nav_list-link">
-          <i class="fas fa-ellipsis-h"></i></a>
+            <i class="fas fa-ellipsis-h"></i>
+          </a>
         </li>
       </ul>
-
     </nav>
   </body>
 </html>
