--- a/more.html
+++ b/more.html
@@ -5,56 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-    /> 
-    <title>MORE | KAKAO CLONE</title>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>More | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <span class="status-bar_clock">13:54</span>
+        <span class="status-bar_clock">13:15</span>
       </div>
-      <div class="status-bar_column"></div>
+      <div class="status-bar_column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
         <span class="status-bar_battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
-        <div class="header_header-cloumn">
-          <h1 class="header_title">More</h1>
-        </div>
-
-        <div class="header_header-cloumn">
-          <span class="header_icon">
-            <i class="fas fa-search"></i>
-          </span>
-
-          <span class="header_icon">
-            <i class="fas fa-qrcode"></i>
-          </span>
-
-          <span class="header_icon">
+      <div class="header_header-column">
+        <h1 class="header_title">More</h1>
+      </div>
+      <div class="header_header-column">
+        <span class="header_icon">
+          <i class="fas fa-search"></i>
+        </span>
+        <span class="header_icon">
+          <i class="fas fa-qrcode"></i>
+        </span>
+        <span class="header_icon">
           <a href="settings.html">
             <i class="fas fa-cog"></i>
           </a>
-          </span>
-        </div>
+        </span>
+      </div>
     </header>
     <main class="more">
       <header class="more_header">
         <div class="friends_friend friend friend--lg">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avatar friend friend--lg">
+            <img src="image/download.jpg" class="g-avator friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
-                Nicolas Serrano
+                Han Heejin
               </span>
               <span class="friend_status">
-                itnicolasme@gmail.com
+                hanhejin3@naver.com
               </span>
             </div>
           </div>
@@ -67,78 +65,84 @@
             <span class="more_btn-icon">
               <i class="far fa-smile fa-2x"></i>
             </span>
-              <span class="more_btn-title">
+            <span class="more_btn-title">
               Emoticons
-              </span>
+            </span>
           </li>
 
           <li class="more_btn">
             <span class="more_btn-icon">
-             <i class="fas fa-brush fa-2x"></i>
+              <i class="fas fa-brush fa-2x"></i>
             </span>
-              <span class="more_btn-title">
+            <span class="more_btn-title">
               Themes
-              </span>
+            </span>
           </li>
+
           <li class="more_btn">
             <span class="more_btn-icon">
               <i class="fab fa-kickstarter-k fa-2x"></i>
             </span>
-              <span class="more_btn-title">
+            <span class="more_btn-title">
               Account
-              </span>
+            </span>
           </li>
         </ul>
       </header>
+
       <section class="more_suggestions">
-        <h5 class="more_title">Suggestions</h5>
+        <h5 class="more_tilte">Suggestions</h5>
         <ul class="more_suggestions-list">
-          <li class="more_suggestions suggestion">
+          <li class="more_suggestion suggestion">
             <span class="suggestion_icon">
               <i class="fas fa-quote-right fa-2x"></i>
             </span>
-              <span class="suggestion_title">Kakao Story</span>
-            </i>
+            <span class="suggestion_title">Kakao Story</span>
           </li>
-          <li class="more_suggestions suggestion">
+
+          <li class="more_suggestion suggestion">
             <span class="suggestion_icon">
               <i class="fas fa-beer fa-2x"></i>
             </span>
-              <span class="suggestion_title">Kakao Friends</span>
-            </i>
+            <span class="suggestion_title">Kakao Friends</span>
           </li>
-          <li class="more_suggestions suggestion">
+
+          <li class="more_suggestion suggestion">
             <span class="suggestion_icon">
               <i class="fas fa-gamepad fa-2x"></i>
             </span>
-              <span class="suggestion_title">Friends Gem</span>
-            </i>
+            <span class="suggestion_title">Friends Gen</span>
           </li>
         </ul>
       </section>
     </main>
+
     <nav class="nav">
       <ul class="nav_list">
         <li class="nav_list-item">
           <a href="friends.html" class="nav_list-link">
-          <i class="far fa-user"></i></a>
+            <i class="fas fa-user"></i>
+          </a>
         </li>
-        
+
         <li class="nav_list-item">
           <a href="index.html" class="nav_list-link">
-          <i class="far fa-comment"></i></a>
+            <i class="far fa-comment"></i>
+          </a>
         </li>
 
         <li class="nav_list-item">
           <a href="find.html" class="nav_list-link">
-          <i class="fas fa-search"></i></a>
+            <i class="fas fa-search"></i>
+          </a>
         </li>
+
         <li class="nav_list-item">
           <a href="more.html" class="nav_list-link">
-          <i class="fas fa-ellipsis-h"></i></a>
+            <i class="fas fa-ellipsis-h"></i>
+          </a>
         </li>
       </ul>
-
     </nav>
   </body>
 </html>
