--- a/settings.html
+++ b/settings.html
@@ -5,61 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
-    /> 
-    <title>Setting | KAKAO CLONE</title>
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Settings | Kakao Clone</title>
   </head>
   <body>
     <div class="status-bar">
       <div class="status-bar_column">
-        <span class="status-bar_clock">13:54</span>
+        <span class="status-bar_clock">13:15</span>
       </div>
-      <div class="status-bar_column"></div>
+      <div class="status-bar_column">
         <i class="fas fa-clock"></i>
         <i class="fas fa-volume-mute"></i>
         <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
         <span class="status-bar_battery-level">100%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="header">
-        <div class="header_header-cloumn">
-                <a href="more.html" class="header_back-btn">
-                    <i class="fas fa-arrow-left fa-2x"></i>
-                </a>    
-            <h1 class="header_title">Settings</h1>
-        </div>
-
-        <div class="header_header-cloumn">
-            <span class="header_icon">
-            <i class="fas fa-search"></i>
-            </span>
-        </div>
+      <div class="header_header-column">
+        <a href="more.html" class="header_back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </a>
+        <h1 class="header_title">Settings</h1>
+      </div>
+      <div class="header_header-column">
+        <span class="header_icon">
+          <i class="fas fa-search"></i>
+        </span>
+      </div>
     </header>
     <main class="settings">
-        <section class="settings_sections">
+      <section class="settings_sections">
         <ul class="settings_list">
-            <li class="settings_setting">
-                <span class="settings_icon">
-                    <i class="fas fa-lock"></i>
-                </span>
-                <span class="settings_title">Privacy</span>
-            </li>
-            <li class="settings_setting">
-                <span class="settings_icon">
-                    <i class="far fa-bell"></i>
-                </span>
-                <span class="settings_title">Notifications</span>
-            </li>
-            <li class="settings_setting">
-                <span class="settings_icon">
-                    <i class="far fa-user"></i>
-                </span>
-                <span class="settings_title">Friends</span>
-            </li>
+          <li class="settings_setting">
+            <span class="settings_icon">
+              <i class="fas fa-lock"></i>
+            </span>
+            <span class="settings_title">Privacy</span>
+          </li>
+          <li class="settings_setting">
+            <span class="settings_icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings_title">Notifications</span>
+          </li>
+          <li class="settings_setting">
+            <span class="settings_icon">
+              <i class="far fa-user"></i>
+            </span>
+            <span class="settings_title">Friends</span>
+          </li>
         </ul>
-        </section>
+      </section>
     </main>
-</body>
+  </body>
 </html>
