--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
       <header class="more_header">
         <div class="friends_friend friend friend--lg">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avator friend_avatar" />
+            <img src="image/download.jpg" class="g-avatar friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
                 Han Heejin
@@ -91,7 +91,7 @@
       </header>
 
       <section class="more_suggestions">
-        <h5 class="more_tilte">Suggestions</h5>
+        <h5 class="more_title">Suggestions</h5>
         <ul class="more_suggestions-list">
           <li class="more_suggestion suggestion">
             <span class="suggestion_icon">
@@ -144,5 +144,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen_text">Please your Screen small</span>
+    </div>
   </body>
 </html>
