--- a/friends.html
+++ b/friends.html
@@ -40,9 +40,9 @@
 
     <main class="friends">
       <header class="friends_header">
-        <div class="friends_friend friend friend--lg">
+        <div class="friends_friend friend">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avator friend_avatar" />
+            <img src="image/download.jpg" class="g-avatar friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
                 Han Heejin
@@ -59,7 +59,7 @@
         <h5 class="friends_title">Plus Friend</h5>
         <div class="friends_friend friend friend">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avator friend_avatar" />
+            <img src="image/download.jpg" class="friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
                 Plus Friend
@@ -73,7 +73,7 @@
         <h5 class="friends_title">Friends 14</h5>
         <li class="friends_friend friend friend--lg">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avator friend_avatar" />
+            <img src="image/download.jpg" class="friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
                 Han Heejin
@@ -120,5 +120,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen_text">Please your Screen small</span>
+    </div>
   </body>
 </html>
