--- a/find.html
+++ b/find.html
@@ -64,7 +64,7 @@
 
           <li class="find_header-btn header-btn">
             <span class="header-btn_icon">
-              <i class="far fa-envelope fa-3x"></i>
+              <i class="far fa-envelope fa-2x"></i>
             </span>
             <span class="header-btn_title">Invite</span>
           </li>
@@ -74,7 +74,7 @@
         <h5 class="find_title">Recommended Friends</h5>
         <li class="find_friend friend friend--lg">
           <div class="friend_column">
-            <img src="image/download.jpg" class="g-avator friend_avatar" />
+            <img src="image/download.jpg" class="friend_avatar" />
             <div class="friend_content">
               <span class="friend_name">
                 Han Heejin
@@ -117,5 +117,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen_text">Please your Screen small</span>
+    </div>
   </body>
 </html>
